added header changes

--- a/index.html
+++ b/index.html
@@ -14,9 +14,41 @@
     <section class="welcome">
         <header class="header">
             <div class="container header__container">
+                <a href="/" class="header__logo">
+                    Freelancer
+                    <span>portfolio</span>
+                </a>
+                <nav class="header__nav">
+                    <ul class="header__ul">
+                        <li>
+                            <a href="#" class="is-active">Projects</a>
+                        </li>
+                        <li>
+                            <a href="#">Skills</a>
+                        </li>
+                        <li>
+                            <a href="#">Contacts</a>
+                        </li>
+                    </ul>
+                </nav>
 
             </div>
         </header>
+        <div class="container">
+            <div class="welcome__title">
+                <p>Hi, my name is</p>
+                <p><h1>Katya</h1></p>
+            </div>
+            <p class="welcome__desc">
+                a frontend developer
+            </p>
+            <p class="welcome__text">
+                with passion for learning and creating.
+            </p>
+            <div class="welcome__button">
+                <a href="#" class="btn welcome__btn">Download CV</a>
+            </div>
+        </div>
     </section>
     <section class="projects">
         <div class="container">
